# acor-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
cpp/: CMakeLists.txt  acor_cpp.cpp
scripts/: compare_acor_r_python.py
src/: acor.py  acor_cpp_bindings.py  acor_functions.py  acor_internals.py  agc_functions.py  akc_functions.py
